methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:28: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    n match {
    ^PatternPicture:34: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return c;
  ^